# ftx-rest-client

./: .env.example  .gitignore  Cargo.toml  README.md  integration-tests.sh  unit-tests.sh
examples/: get_market.rs
src/: auth.rs  client.rs  data.rs  error.rs  lib.rs
src/endpoints/: account.rs  fills.rs  funding_payments.rs  futures.rs  indices.rs  markets.rs  mod.rs  orders.rs  spot_margin.rs  statistics.rs  subaccounts.rs  wallet.rs
tests/: account.rs  common.rs  fills.rs  funding_payments.rs  futures.rs  indices.rs  markets.rs  orders.rs  spot_margin.rs  statistics.rs  subaccounts.rs  wallet.rs
