[package]
name = "ftx-rest-client"
version = "0.1.0"
authors = ["Douglas Gray <dbgray01@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.53"
bytes = "1.1.0"
hex = "0.4.3"
hmac = "0.12.1"
reqwest = "0.11.10"
rust_decimal = { version = "1.23.1", features = ["serde-arbitrary-precision"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = {version = "1.0.81", features = ["arbitrary_precision"] }
serde_urlencoded = "0.7.1"
sha2 = "0.10.2"
time = { version = "0.3.9", features = ["parsing", "macros"] }
urlencoding = "2.1.0"

[dev-dependencies]
config = "0.12"
crossbeam-channel = "0.5"
dotenv = "0.15"
once_cell = "1.8"
serial_test = "0.6.0"
tokio = { version = "1.17", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.0", features = ["v4"] }

[features]
deny-unknown-fields = []